rnsc/test_data/rns_integration/error/parser/code_header/missing_locals.rns
.class MissingLocals
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2
    return
  .code_end
.method_end
.class_end
